# vix

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-BSD  LICENSE-GPL-2.0  LICENSE-GPL-3.0  Makefile  README.md  cspell.json  dist-workspace.toml  index.md  plan.md  project-words.txt  tasks.md
.cargo/: config.toml
AGENTS/: conventions.md  workflow.md
docs/: architecture.md  configuration.md  i18n.md  index.md  keybindings.md  themes.md
examples/: headless_edit.rs  list_commands.rs
locales/: app.yml
scripts/: check
spec/: bottom-dock.md  case-change.md  code-editor.md  command-palette.md  comparisons.md  date-time-calendar-panel.md  dictionaries.md  file-explorer.md  find-panel.md  git-integration.md  git-panel.md  hover.md  index.md  keyboard.md  keyway-chooser.md  locale-chooser.md  locales.md  main-rs-and-lib-rs-boilerplate.md  menus.md  navigation.md  nerd-font-palette.md  right-dock.md  rust-cargo-config-toml-musl.md  scrollbars.md  search-and-replace.md  spec.md  system-information-panel.md  theme-chooser.md  themes.md  trademarks.md  vix-ascii-panel.md  vix-bottom-dock.md  vix-calendar.md  vix-left-dock.md  vix-project-dashboard-panel.md  vix-spellcheck.md  vix-status-bar-panel.md
src/: affix.rs  app.rs  ascii_character_picker.rs  base16.rs  base64_tool.rs  base_tool.rs  bottom_dock.rs  calculator_tool.rs  calendar_panel.rs  case.rs  checksum_tool.rs  clock_panel.rs  color_converter_tool.rs  conflict_tool.rs  contact_panel.rs  convert_from_csv_into_json_tool.rs  convert_from_csv_into_tsv_tool.rs  convert_from_html_into_markdown_tool.rs  convert_from_json_into_csv_tool.rs  convert_from_json_into_toml_tool.rs  convert_from_json_into_tsv_tool.rs  convert_from_json_into_yaml_tool.rs  convert_from_markdown_into_html_tool.rs  convert_from_toml_into_json_tool.rs  convert_from_tsv_into_csv_tool.rs  convert_from_tsv_into_json_tool.rs  convert_from_yaml_into_json_tool.rs  convert_tabular.rs  dap.rs  datetime.rs  diff_view.rs  edit_bytes.rs  edit_outline.rs  edit_sql.rs  edit_table.rs  edit_value.rs  editor.rs  emmet.rs  explorer.rs  file_information_panel.rs  (+56 more)
test-data/: unicode-stress.txt
tests/: db_smoke.rs  integration.rs  lsp_smoke.rs
themes/: amber-phosphor.json  dark.json  darker.json  darkest.json  dracula.json  green-phosphor.json  gruvbox-dark.json  light.json  lighter.json  lightest.json  matrix.json  monokai.json  nord.json  one-dark.json  phosphor-amber.json  phosphor-green.json  safelight-red.json  solarized-dark.json  solarized-light.json  tokyo-night.json  turbo.json
vix-ascii-character-picker/: Cargo.toml
vix-ascii-character-picker/spec/: index.md
vix-ascii-panel/: Cargo.toml
vix-base64-tool/: Cargo.toml
vix-bottom-dock/: Cargo.toml
vix-bottom-dock/spec/: index.md
vix-bottom-dock/src/: lib.rs
vix-calculator-tool/: Cargo.toml
vix-calculator-tool/src/: lib.rs
vix-calendar-panel/: Cargo.toml
vix-checksum-tool/: Cargo.toml
vix-checksum-tool/src/: lib.rs
vix-clock-panel/: Cargo.toml
vix-clock-panel/spec/: index.md
vix-clock-panel/src/: lib.rs
vix-code-editor-panel/: Cargo.toml  LICENSE
vix-color-converter-tool/: Cargo.toml
vix-color-converter-tool/src/: lib.rs
vix-contact-panel/: Cargo.toml
vix-contact-panel/spec/: index.md
vix-contact-panel/src/: lib.rs
vix-convert-csv-to-json-tool/: Cargo.toml
vix-convert-csv-to-tsv-tool/: Cargo.toml
vix-convert-from-csv-into-json-tool/: Cargo.toml
vix-convert-from-csv-into-tsv-tool/: Cargo.toml
vix-convert-from-html-into-markdown-tool/: Cargo.toml
vix-convert-from-json-into-csv-tool/: Cargo.toml
vix-convert-from-json-into-toml-tool/: Cargo.toml
vix-convert-from-json-into-tsv-tool/: Cargo.toml
vix-convert-from-json-into-yaml-tool/: Cargo.toml
vix-convert-from-markdown-into-html-tool/: Cargo.toml
vix-convert-from-markdown-into-html-tool/src/: lib.rs
vix-convert-from-toml-into-json-tool/: Cargo.toml
vix-convert-from-tsv-into-csv-tool/: Cargo.toml
vix-convert-from-tsv-into-json-tool/: Cargo.toml
vix-convert-from-yaml-into-json-tool/: Cargo.toml
vix-convert-html-to-markdown-tool/: Cargo.toml
vix-convert-json-to-csv-tool/: Cargo.toml
vix-convert-json-to-toml-tool/: Cargo.toml
vix-convert-json-to-toml-tool/src/: lib.rs
vix-convert-json-to-tsv-tool/: Cargo.toml
vix-convert-json-to-yaml-tool/: Cargo.toml
vix-convert-markdown-to-html-tool/: Cargo.toml
vix-convert-tabular/: Cargo.toml
vix-convert-tabular/src/: lib.rs
vix-convert-toml-to-json-tool/: Cargo.toml
vix-convert-tsv-to-csv-tool/: Cargo.toml
vix-convert-tsv-to-json-tool/: Cargo.toml
vix-convert-tsv-to-json-tool/src/: lib.rs
vix-convert-yaml-to-json-tool/: Cargo.toml
vix-convert-yaml-to-json-tool/src/: lib.rs
vix-date-time-calendar-panel/: Cargo.toml
vix-date-time-calendar-panel/src/: lib.rs
vix-editor/: Cargo.toml
vix-editor/spec/: index.md
vix-editor/src/: actions.rs  brackets.rs  click.rs  code.rs  editor.rs  editor_crossterm.rs  lib.rs  lines.rs  multicursor.rs  named.rs  render.rs  wrap.rs
vix-file-information-panel/: Cargo.toml
vix-file-information-panel/spec/: index.md
vix-find-panel/: Cargo.toml
vix-find-panel/spec/: index.md
vix-find-panel/src/: lib.rs
vix-git/: Cargo.toml
vix-html-character-picker/: Cargo.toml
vix-keyboard-shortcut-panel/: Cargo.toml
vix-keymap-chooser/: Cargo.toml
vix-keymap-model/: Cargo.toml
vix-keyway-chooser/: Cargo.toml
vix-left-dock/: Cargo.toml
vix-locale-chooser/: Cargo.toml
vix-locale-model/: Cargo.toml
vix-lsp/: Cargo.toml
vix-nerd-font-palette/: Cargo.toml
vix-nerd-font-picker/: Cargo.toml
vix-outline-panel/: Cargo.toml
vix-pomodoro-timer-tool/: Cargo.toml
vix-pomodoro-tool/: Cargo.toml
vix-project-dashboard-panel/: Cargo.toml
vix-right-dock/: Cargo.toml
vix-spellcheck/: Cargo.toml
vix-status-bar-panel/: Cargo.toml
vix-system-information-panel/: Cargo.toml
vix-text-information-panel/: Cargo.toml
vix-theme-chooser/: Cargo.toml
vix-theme-model/: Cargo.toml
vix-time-zone-chooser/: Cargo.toml
vix-time-zone-model/: Cargo.toml
(+1132 files in other folders)
