# `vix` is both the application package and the workspace root, so
# `cargo build`/`cargo test --workspace` cover the internal crates too, and the
# whole tree shares one lockfile and target directory.
[workspace]
members = []

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Where to host releases
hosting = "github"
# Whether to install an updater program
install-updater = false
# Homebrew tap repo to publish the formula to.
tap = "vixide/homebrew-tap"
# Run the Homebrew publish job (pushes the formula to the tap above).
publish-jobs = ["homebrew"]
# npm scope for the published package (=> @vixide/vix).
npm-scope = "@vixide"

[package]
name = "vix"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
description = "Vix IDE: a visual integrated development environment that is TUI, friendly, featureful, high-speed, and high-security."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/vixide/vix"
homepage = "https://github.com/vixide/vix"
readme = "README.md"
keywords = ["tui", "editor", "ide", "terminal", "developer"]
categories = ["text-editors", "command-line-utilities"]

[features]
# Which Tree-sitter grammars to compile in. Each grammar is a sizeable C parser,
# so the default is a lean set; opt into more (or all) at build time:
#   cargo build --release                                  # common grammars
#   cargo build --release --no-default-features            # no highlighting (smallest)
#   cargo build --release --no-default-features --features syntax-all
default = ["syntax-common"]
syntax-common = ["lang-rust", "lang-markdown", "lang-json", "lang-toml"]
syntax-all = [
    "lang-bash", "lang-c", "lang-c-sharp", "lang-cpp", "lang-css", "lang-go",
    "lang-html", "lang-java", "lang-javascript", "lang-json", "lang-markdown",
    "lang-python", "lang-rust", "lang-toml", "lang-typescript", "lang-yaml",
]

# One feature per Tree-sitter grammar — each pulls in only that C parser. The
# editor (src/editor_core/) links a parser only when its feature is enabled.
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-css = ["dep:tree-sitter-css"]
lang-go = ["dep:tree-sitter-go"]
lang-html = ["dep:tree-sitter-html"]
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-kotlin = ["dep:tree-sitter-kotlin"]
lang-markdown = ["dep:tree-sitter-md"]
lang-postgres = ["dep:tree-sitter-postgres"]
lang-python = ["dep:tree-sitter-python"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-zig = ["dep:tree-sitter-zig"]

[dependencies]
# Terminal UI core. The whole widget ecosystem must agree on this version.
ratatui = { version = "0.30", features = ["crossterm"] }
# The custom code-editor widget now lives in-tree at src/editor_core/; its
# Tree-sitter, clipboard, rope, and grammar dependencies are listed below.
# Calendar box: date/time strings and the navigable month grid. Internal crate so
# the calendar logic stays unit-testable on its own (it owns the jiff dependency).
# Clock box: live date/time strings (local, UTC, ISO week, active zone) + rows.
# Theme model: the JSON theme model, ratatui styles, and theme loading.
# Locale model: available UI languages (the View → Locale submenu).
# Keymap model: available keyboard navigation styles (the View → Keymap submenu).
# Time-zone model: full IANA canonical zone table + the app-wide active zone
# (the View → Time Zone submenu).
# Keyboard-shortcut help rows (key combo + i18n description key).
# Nerd Font palette (Tools menu): curated glyph set + character-picker grid state.
# ASCII panel (Tools menu): the ASCII reference table + row-selection state.
# X11 Colors panel (Tools menu): the X11 color table + row-selection state.
# HTML Characters panel (Tools menu): HTML named-character table + row-selection state.
# System Information panel (Tools menu): host OS/CPU/memory/disk snapshot.
# File Information panel (Tools menu): active-file name/counts/size/perms/mtime.
# Workspace Dashboard panel (Tools menu): live folder/disk/file/commit metrics.
# Outline panel: code symbol list (kind + name + line) + selection state.
# Welcome panel: first-run welcome text + scroll state.
# vCard (RFC 6350) parser, and the contact-browser / single-vcard view panels.
# LSP client core: JSON-RPC framing, message builders, parsers, position maths.
# Spell checking: Hunspell-backed checker over comment/string ranges.
# Git integration: status/diff/staging via the git CLI.
# Find / find-and-replace box state (query, replacement, toggles, pattern builder).
# Right dock: message-drawer state (advice/notifications + selection).
# Left dock: file-explorer tree state (lazy expand, selection, multi-select).
# Status bar: formatting for the left/right segments.
# Bottom dock: scrollable line buffer (logs, output, data views).
# or buffer (Base64, URL, CSV/TSV/JSON, YAML/JSON).
# Cross-platform terminal backend. Must match the crossterm that ratatui 0.30 re-exports.
crossterm = "0.29"
# Recursive, .gitignore-aware directory walking for the file index / fuzzy finder.
ignore = "0.4"
# HTTP client for the REST tool. Pure-Rust TLS (rustls) so it cross-compiles to
# musl/windows-gnu without a system OpenSSL.
ureq = "2"
# Regular expressions for find/replace.
regex = "1"
# Settings serialization (confy handles the TOML; serde derives the schema).
serde = { version = "1", features = ["derive"] }
# JSON for the LSP client's JSON-RPC traffic.
serde_json = "1"
# Image preview. Default features pull `chafa-dyn`, which dynamically links the
# native libchafa via pkg-config and so blocks portable cross-compilation; drop
# it and keep the built-in protocols (Sixel/Kitty/iTerm2/Halfblocks).
ratatui-image = { version = "11.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
confy = "2.0.0"
clap = { version = "4.6.1", features = ["derive"] }
rust-i18n = "4.1.0"

# Dependencies absorbed from the former subcrates (now modules under src/).
base64 = "0.22"
evalexpr = "13"
getrandom = "0.2"
htmd = "0.5"
jiff = "0.2"
percent-encoding = "2"
pulldown-cmark = "0.13"
sha2 = "0.10"
# `inline` enables word-level (intra-line) diffs in the Compare overlay.
similar = { version = "2", features = ["inline"] }
spellbook = "0.4"
sysinfo = "0.33"
toml = "0.8"
md-5 = "0.10"
crc32fast = "1"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
include_dir = "0.7.4"
serde_yaml = "0.9.34"
markdown = "1.0.0"
nix = { version = "0.29", features = ["signal"] }
# QR code generation (Tools → QR Code). default-features = false drops the
# optional image/svg renderers; we only use the built-in Unicode renderer.
qrcode = { version = "0.14", default-features = false }
# Integrated terminal (Tools → Terminal): a real PTY (ConPTY/openpty) hosting a
# shell, with `vt100` parsing the escape sequences into a renderable screen grid.
portable-pty = "0.8"
vt100 = "0.15"

# Dependencies for the in-tree code-editor widget (src/editor_core/).
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
ratatui-core = "0.1"
ropey = "1.6"
rust-embed = { version = "8.11", features = ["include-exclude"] }
streaming-iterator = "0.1"
tree-sitter = "0.26"
unicode-segmentation = "1.13"
unicode-width = "0.2"

# Optional Tree-sitter grammars, selected by the lang-* features above.
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.2", optional = true }
tree-sitter-c-sharp = { version = "0.23.5", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-kotlin = { version = "0.2", optional = true }
tree-sitter-md = { version = "0.5.3", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-postgres = { version = "1.2.4", optional = true }
tree-sitter-swift = { version = "0", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }

# Faster allocator for the MUSL static target (glibc's allocator is fine, but
# musl's is slow). Used as the global allocator in lib.rs/main.rs under the same
# cfg, so it is only pulled in — and its C code only compiled — for musl builds.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
