# `vix` is both the application package and the workspace root, so
# `cargo build`/`cargo test --workspace` cover the internal crates too, and the
# whole tree shares one lockfile and target directory.
[workspace]
members = ["crates/*"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Where to host releases
hosting = "github"
# Whether to install an updater program
install-updater = false
# Homebrew tap repo to publish the formula to.
tap = "vixide/homebrew-tap"
# Run the Homebrew publish job (pushes the formula to the tap above).
publish-jobs = ["homebrew"]
# npm scope for the published package (=> @vixide/vix).
npm-scope = "@vixide"

# Metadata shared by the root `vix` package and every `crates/vix_*` member, so
# version/edition/license/etc. are declared once and inherited with
# `field.workspace = true`.
[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/vixide/vix"
homepage = "https://github.com/vixide/vix"

# All external dependencies are declared here once; every member crate (and the
# root `vix` package) inherits them with `{ workspace = true }` so versions and
# feature sets stay in lock-step across the workspace.
[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
ignore = "0.4"
ureq = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui-image = { version = "11.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
confy = "2.0.0"
clap = { version = "4.6.1", features = ["derive"] }
rust-i18n = "4.1.0"
base64 = "0.22"
evalexpr = "13"
getrandom = "0.2"
htmd = "0.5"
jiff = "0.2"
percent-encoding = "2"
pulldown-cmark = "0.13"
sha2 = "0.10"
similar = { version = "2", features = ["inline"] }
spellbook = "0.4"
sysinfo = "0.33"
toml = "0.8"
md-5 = "0.10"
crc32fast = "1"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
include_dir = "0.7.4"
serde_yaml = "0.9.34"
markdown = "1.0.0"
nix = { version = "0.29", features = ["signal"] }
qrcode = { version = "0.14", default-features = false }
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
ratatui-core = "0.1"
ropey = "1.6"
rust-embed = { version = "8.11", features = ["include-exclude"] }
streaming-iterator = "0.1"
tree-sitter = "0.26"
unicode-segmentation = "1.13"
unicode-width = "0.2"
tree-sitter-bash = { version = "0.25.1" }
tree-sitter-c = { version = "0.24.2" }
tree-sitter-c-sharp = { version = "0.23.5" }
tree-sitter-cpp = { version = "0.23.4" }
tree-sitter-css = { version = "0.25" }
tree-sitter-go = { version = "0.25" }
tree-sitter-html = { version = "0.23.2" }
tree-sitter-java = { version = "0.23.5" }
tree-sitter-javascript = { version = "0.25" }
tree-sitter-json = { version = "0.24.8" }
tree-sitter-kotlin = { version = "0.2" }
tree-sitter-md = { version = "0.5.3" }
tree-sitter-python = { version = "0.25" }
tree-sitter-ruby = { version = "0" }
tree-sitter-rust = { version = "0.24" }
tree-sitter-postgres = { version = "1.2.4" }
tree-sitter-swift = { version = "0" }
tree-sitter-toml-ng = { version = "0.7.0" }
tree-sitter-typescript = { version = "0.23" }
tree-sitter-yaml = { version = "0.7" }
tree-sitter-zig = { version = "1.1.2" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "any", "sqlite", "postgres", "mysql"] }
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
futures-util = { version = "0.3", default-features = false }
mimalloc = "0.1"

[package]
name = "vix"
version = "1.1.0"
edition = "2024"
rust-version = "1.95"
description = "Vix IDE: a visual integrated development environment that is TUI, friendly, featureful, high-speed, and high-security."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/vixide/vix"
homepage = "https://github.com/vixide/vix"
readme = "README.md"
keywords = ["tui", "editor", "ide", "terminal", "developer"]
categories = ["text-editors", "command-line-utilities"]

[features]
# Which Tree-sitter grammars to compile in. Each grammar is a sizeable C parser,
# so the default is a lean set; opt into more (or all) at build time:
#   cargo build --release                                  # common grammars
#   cargo build --release --no-default-features            # no highlighting (smallest)
#   cargo build --release --no-default-features --features syntax-all
#
# The grammars actually live in the vix_editor_core crate; these features simply
# forward to that crate's identically-named features.
default = ["syntax-common"]
syntax-common = ["vix_editor_core/syntax-common"]
syntax-all = ["vix_editor_core/syntax-all"]

lang-bash = ["vix_editor_core/lang-bash"]
lang-c = ["vix_editor_core/lang-c"]
lang-c-sharp = ["vix_editor_core/lang-c-sharp"]
lang-cpp = ["vix_editor_core/lang-cpp"]
lang-css = ["vix_editor_core/lang-css"]
lang-go = ["vix_editor_core/lang-go"]
lang-html = ["vix_editor_core/lang-html"]
lang-java = ["vix_editor_core/lang-java"]
lang-javascript = ["vix_editor_core/lang-javascript"]
lang-json = ["vix_editor_core/lang-json"]
lang-markdown = ["vix_editor_core/lang-markdown"]
lang-python = ["vix_editor_core/lang-python"]
lang-rust = ["vix_editor_core/lang-rust"]
lang-toml = ["vix_editor_core/lang-toml"]
lang-typescript = ["vix_editor_core/lang-typescript"]
lang-yaml = ["vix_editor_core/lang-yaml"]

[dependencies]
# Shared single-embed i18n backend for the whole workspace (see crates/vix_i18n).
vix_i18n = { path = "crates/vix_i18n" }
# Extracted leaf concept crates (one per major concept).
vix_base16 = { path = "crates/vix_base16" }
vix_clock_panel = { path = "crates/vix_clock_panel" }
vix_convert_from_csv_into_json_tool = { path = "crates/vix_convert_from_csv_into_json_tool" }
vix_convert_from_csv_into_tsv_tool = { path = "crates/vix_convert_from_csv_into_tsv_tool" }
vix_convert_from_json_into_csv_tool = { path = "crates/vix_convert_from_json_into_csv_tool" }
vix_convert_from_json_into_tsv_tool = { path = "crates/vix_convert_from_json_into_tsv_tool" }
vix_convert_from_tsv_into_csv_tool = { path = "crates/vix_convert_from_tsv_into_csv_tool" }
vix_convert_from_tsv_into_json_tool = { path = "crates/vix_convert_from_tsv_into_json_tool" }
vix_dap = { path = "crates/vix_dap" }
vix_db = { path = "crates/vix_db" }
vix_editor = { path = "crates/vix_editor" }
vix_editor_core = { path = "crates/vix_editor_core", default-features = false }
vix_lsp = { path = "crates/vix_lsp" }
vix_menu = { path = "crates/vix_menu" }
vix_session = { path = "crates/vix_session" }
vix_settings = { path = "crates/vix_settings" }
vix_snippets = { path = "crates/vix_snippets" }
vix_theme = { path = "crates/vix_theme" }
vix_undo_store = { path = "crates/vix_undo_store" }
vix_vcard_panel = { path = "crates/vix_vcard_panel" }
vix_workspace = { path = "crates/vix_workspace" }
vix_affix = { path = "crates/vix_affix" }
vix_ai_diff = { path = "crates/vix_ai_diff" }
vix_ai_panel = { path = "crates/vix_ai_panel" }
vix_align = { path = "crates/vix_align" }
vix_ascii_character_picker = { path = "crates/vix_ascii_character_picker" }
vix_base64_tool = { path = "crates/vix_base64_tool" }
vix_base_tool = { path = "crates/vix_base_tool" }
vix_bottom_dock = { path = "crates/vix_bottom_dock" }
vix_calculator_tool = { path = "crates/vix_calculator_tool" }
vix_calendar_panel = { path = "crates/vix_calendar_panel" }
vix_case = { path = "crates/vix_case" }
vix_checksum_tool = { path = "crates/vix_checksum_tool" }
vix_color_converter_tool = { path = "crates/vix_color_converter_tool" }
vix_conflict_tool = { path = "crates/vix_conflict_tool" }
vix_contact_panel = { path = "crates/vix_contact_panel" }
vix_convert_from_html_into_markdown_tool = { path = "crates/vix_convert_from_html_into_markdown_tool" }
vix_convert_from_json_into_toml_tool = { path = "crates/vix_convert_from_json_into_toml_tool" }
vix_convert_from_json_into_yaml_tool = { path = "crates/vix_convert_from_json_into_yaml_tool" }
vix_convert_from_markdown_into_html_tool = { path = "crates/vix_convert_from_markdown_into_html_tool" }
vix_convert_from_toml_into_json_tool = { path = "crates/vix_convert_from_toml_into_json_tool" }
vix_convert_from_yaml_into_json_tool = { path = "crates/vix_convert_from_yaml_into_json_tool" }
vix_convert_tabular = { path = "crates/vix_convert_tabular" }
vix_diff_view = { path = "crates/vix_diff_view" }
vix_edit_bytes = { path = "crates/vix_edit_bytes" }
vix_edit_sql = { path = "crates/vix_edit_sql" }
vix_edit_value = { path = "crates/vix_edit_value" }
vix_editorconfig = { path = "crates/vix_editorconfig" }
vix_emmet = { path = "crates/vix_emmet" }
vix_file_information_panel = { path = "crates/vix_file_information_panel" }
vix_fileops = { path = "crates/vix_fileops" }
vix_find_panel = { path = "crates/vix_find_panel" }
vix_format_tool = { path = "crates/vix_format_tool" }
vix_git = { path = "crates/vix_git" }
vix_html_character_picker = { path = "crates/vix_html_character_picker" }
vix_http_client = { path = "crates/vix_http_client" }
vix_jwt_tool = { path = "crates/vix_jwt_tool" }
vix_keyboard_shortcut_panel = { path = "crates/vix_keyboard_shortcut_panel" }
vix_keymap_model = { path = "crates/vix_keymap_model" }
vix_left_dock = { path = "crates/vix_left_dock" }
vix_locale_model = { path = "crates/vix_locale_model" }
vix_lorem = { path = "crates/vix_lorem" }
vix_lsp_core = { path = "crates/vix_lsp_core" }
vix_macros = { path = "crates/vix_macros" }
vix_markdown_preview = { path = "crates/vix_markdown_preview" }
vix_media_type = { path = "crates/vix_media_type" }
vix_nerd_font_picker = { path = "crates/vix_nerd_font_picker" }
vix_org = { path = "crates/vix_org" }
vix_org_contacts = { path = "crates/vix_org_contacts" }
vix_outline_panel = { path = "crates/vix_outline_panel" }
vix_palette = { path = "crates/vix_palette" }
vix_pomodoro_tool = { path = "crates/vix_pomodoro_tool" }
vix_qr_tool = { path = "crates/vix_qr_tool" }
vix_query = { path = "crates/vix_query" }
vix_regex_tool = { path = "crates/vix_regex_tool" }
vix_right_dock = { path = "crates/vix_right_dock" }
vix_roam = { path = "crates/vix_roam" }
vix_snippet_tool = { path = "crates/vix_snippet_tool" }
vix_spellcheck = { path = "crates/vix_spellcheck" }
vix_status_bar_panel = { path = "crates/vix_status_bar_panel" }
vix_system_information_panel = { path = "crates/vix_system_information_panel" }
vix_tags = { path = "crates/vix_tags" }
vix_tasks = { path = "crates/vix_tasks" }
vix_terminal = { path = "crates/vix_terminal" }
vix_test_runner = { path = "crates/vix_test_runner" }
vix_text_information_panel = { path = "crates/vix_text_information_panel" }
vix_textops = { path = "crates/vix_textops" }
vix_theme_model = { path = "crates/vix_theme_model" }
vix_time_zone_model = { path = "crates/vix_time_zone_model" }
vix_unit_converter_tool = { path = "crates/vix_unit_converter_tool" }
vix_url_tool = { path = "crates/vix_url_tool" }
vix_uuid_tool = { path = "crates/vix_uuid_tool" }
vix_vcard_parser = { path = "crates/vix_vcard_parser" }
vix_welcome_panel = { path = "crates/vix_welcome_panel" }
vix_workspace_dashboard_panel = { path = "crates/vix_workspace_dashboard_panel" }
vix_x11_color_picker = { path = "crates/vix_x11_color_picker" }
vix_zid_tool = { path = "crates/vix_zid_tool" }
# Terminal UI core. The whole widget ecosystem must agree on this version.
ratatui = { workspace = true }
# The custom code-editor widget now lives in-tree at src/editor_core/; its
# Tree-sitter, clipboard, rope, and grammar dependencies are listed below.
# Calendar box: date/time strings and the navigable month grid. Internal crate so
# the calendar logic stays unit-testable on its own (it owns the jiff dependency).
# Clock box: live date/time strings (local, UTC, ISO week, active zone) + rows.
# Theme model: the JSON theme model, ratatui styles, and theme loading.
# Locale model: available UI languages (the View → Locale submenu).
# Keymap model: available keyboard navigation styles (the View → Keymap submenu).
# Time-zone model: full IANA canonical zone table + the app-wide active zone
# (the View → Time Zone submenu).
# Keyboard-shortcut help rows (key combo + i18n description key).
# Nerd Font palette (Tools menu): curated glyph set + character-picker grid state.
# ASCII panel (Tools menu): the ASCII reference table + row-selection state.
# X11 Colors panel (Tools menu): the X11 color table + row-selection state.
# HTML Characters panel (Tools menu): HTML named-character table + row-selection state.
# System Information panel (Tools menu): host OS/CPU/memory/disk snapshot.
# File Information panel (Tools menu): active-file name/counts/size/perms/mtime.
# Workspace Dashboard panel (Tools menu): live folder/disk/file/commit metrics.
# Outline panel: code symbol list (kind + name + line) + selection state.
# Welcome panel: first-run welcome text + scroll state.
# vCard (RFC 6350) parser, and the contact-browser / single-vcard view panels.
# LSP client core: JSON-RPC framing, message builders, parsers, position maths.
# Spell checking: Hunspell-backed checker over comment/string ranges.
# Git integration: status/diff/staging via the git CLI.
# Find / find-and-replace box state (query, replacement, toggles, pattern builder).
# Right dock: message-drawer state (advice/notifications + selection).
# Left dock: file-explorer tree state (lazy expand, selection, multi-select).
# Status bar: formatting for the left/right segments.
# Bottom dock: scrollable line buffer (logs, output, data views).
# or buffer (Base64, URL, CSV/TSV/JSON, YAML/JSON).
# Cross-platform terminal backend. Must match the crossterm that ratatui 0.30 re-exports.
crossterm = { workspace = true }
# Recursive, .gitignore-aware directory walking for the file index / fuzzy finder.
ignore = { workspace = true }
# HTTP client for the REST tool. Pure-Rust TLS (rustls) so it cross-compiles to
# musl/windows-gnu without a system OpenSSL.
ureq = { workspace = true }
# Regular expressions for find/replace.
regex = { workspace = true }
# Settings serialization (confy handles the TOML; serde derives the schema).
serde = { workspace = true }
# JSON for the LSP client's JSON-RPC traffic.
serde_json = { workspace = true }
# Image preview. Default features pull `chafa-dyn`, which dynamically links the
# native libchafa via pkg-config and so blocks portable cross-compilation; drop
# it and keep the built-in protocols (Sixel/Kitty/iTerm2/Halfblocks).
ratatui-image = { workspace = true }
image = { workspace = true }
confy = { workspace = true }
clap = { workspace = true }
rust-i18n = { workspace = true }

# Dependencies absorbed from the former subcrates (now modules under src/).
base64 = { workspace = true }
evalexpr = { workspace = true }
getrandom = { workspace = true }
htmd = { workspace = true }
jiff = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark = { workspace = true }
sha2 = { workspace = true }
# `inline` enables word-level (intra-line) diffs in the Compare overlay.
similar = { workspace = true }
spellbook = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
md-5 = { workspace = true }
crc32fast = { workspace = true }
uuid = { workspace = true }
include_dir = { workspace = true }
serde_yaml = { workspace = true }
markdown = { workspace = true }
nix = { workspace = true }
# QR code generation (Tools → QR Code). default-features = false drops the
# optional image/svg renderers; we only use the built-in Unicode renderer.
qrcode = { workspace = true }
# Integrated terminal (Tools → Terminal): a real PTY (ConPTY/openpty) hosting a
# shell, with `vt100` parsing the escape sequences into a renderable screen grid.
portable-pty = { workspace = true }
vt100 = { workspace = true }

# Dependencies for the in-tree code-editor widget (src/editor_core/).
anyhow = { workspace = true }
arboard = { workspace = true }
ratatui-core = { workspace = true }
ropey = { workspace = true }
rust-embed = { workspace = true }
streaming-iterator = { workspace = true }
tree-sitter = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

# Optional Tree-sitter grammars, selected by the lang-* features above.
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-kotlin = { workspace = true, optional = true }
tree-sitter-md = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-postgres = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }

# DB workbench (spec/db): embedded database drivers via the `Any` runtime
# driver — SQLite (bundled C), and pure-Rust PostgreSQL/MySQL over rustls (no
# system OpenSSL, same rationale as ureq). Replaces shelling out to the
# sqlite3/psql/mysql CLIs and holds one persistent connection per session.
sqlx = { workspace = true }
# Minimal runtime for sqlx's async drivers; each DB session owns a
# current-thread runtime on its own worker thread (src/db/session.rs).
tokio = { workspace = true }
futures-util = { workspace = true }

# Faster allocator for the MUSL static target (glibc's allocator is fine, but
# musl's is slow). Used as the global allocator in lib.rs/main.rs under the same
# cfg, so it is only pulled in — and its C code only compiled — for musl builds.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }

[profile.release]
lto = true
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
